--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,41 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item
-        android:id="@+id/nav_places"
-        android:icon="@drawable/ic_baseline_home_work_24"
-        android:title="Miejsca"/>
+    <group android:checkableBehavior="single">
 
-    <item
-        android:id="@+id/nav_actions"
-        android:icon="@drawable/ic_baseline_view_list_24"
-        android:title="Akcje"/>
 
-    <item
-        android:id="@+id/nav_game_miejska"
-        android:icon="@drawable/ic_baseline_place_24"
-        android:title="Gra miejska"/>
+        <item
+            android:id="@+id/nav_places"
+            android:icon="@drawable/ic_baseline_home_work_24"
+            android:title="Miejsca"/>
 
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="Settings"/>
+        <item
+            android:id="@+id/nav_actions"
+            android:icon="@drawable/ic_baseline_view_list_24"
+            android:title="Akcje"/>
 
-    <item
-        android:id="@+id/nav_help_review"
-        android:icon="@drawable/ic_baseline_help_24"
-        android:title="Pomoc i opinie"/>
+        <item
+            android:id="@+id/nav_game_miejska"
+            android:icon="@drawable/ic_baseline_place_24"
+            android:title="Gra miejska"/>
 
-    <item android:title="Profile">
-        <menu>
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="Settings"/>
 
-            <item
-                android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_baseline_logout_24"
-                android:title="Logout"/>
+        <item
+            android:id="@+id/nav_help_review"
+            android:icon="@drawable/ic_baseline_help_24"
+            android:title="Pomoc i opinie"/>
 
-        </menu>
-    </item>
+    </group>
+
+        <item android:title="Profile">
+            <menu>
+                <group android:checkableBehavior="single">
+
+                    <item
+                        android:id="@+id/nav_logout"
+                        android:icon="@drawable/ic_baseline_logout_24"
+                        android:title="Logout"/>
+
+                </group>
+
+            </menu>
+        </item>
 
 
 </menu>
