--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="red">#DD982727</color>
+    <color name="yellow">#DD9E8013</color>
     <color name="underlineColor">#BDB8B8</color>
 </resources>
