--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -24,7 +24,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
-            android:title="Settings"/>
+            android:title="Ustawienia"/>
 
         <item
             android:id="@+id/nav_help_review"
