--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -27,6 +27,7 @@
                     android:inputType="textPersonName"/>
 
                 <Button
+                    android:id="@+id/search"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:textColor="@color/white"
