--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerPlacesLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="4dp"
     tools:context=".ActionsFragment">
-    <EditText
-        android:id="@+id/editTextNum"
+    
+    <ListView
+        android:id="@+id/listOfActions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter mobile number"
-        android:textColor="@android:color/black" />
-    <EditText
-        android:id="@+id/editTextMsg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your message"
-        android:textColor="@android:color/black" />
-    <Button
-        android:id="@+id/btnSendMsg"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="4dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:onClick="sendMessage"
-        android:text="Send Message" />
-</LinearLayout>
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_baseline_add_24"
+        android:contentDescription="Add"
+        android:layout_margin="16dp" />
+
+</FrameLayout>
