--- a/app/src/main/res/layout/fragment_add_action.xml
+++ b/app/src/main/res/layout/fragment_add_action.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="Select Place: "/>
+            android:text="Select place: "/>
 
         <Spinner
             android:id="@+id/places_spinner"
@@ -40,19 +40,12 @@
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/placeName"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your place"
-        android:textColor="@android:color/black" />
     <Button
         android:id="@+id/btnSaveAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:text="Save action" />
 
 
