--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawerPlacesLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActionsFragment">
+    tools:context=".HomeFragments.ActionsFragment">
     
     <ListView
         android:id="@+id/listOfActions"
