--- a/app/src/main/res/layout/fragment_add_action.xml
+++ b/app/src/main/res/layout/fragment_add_action.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="4dp"
-    tools:context=".AddActionFragment">
+    tools:context=".AddDataFragment.AddActionFragment">
     <EditText
         android:id="@+id/phoneNumber"
         android:layout_width="match_parent"
