--- a/app/src/main/res/layout/fragment_help_review.xml
+++ b/app/src/main/res/layout/fragment_help_review.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".HelpReviewFragment"
+    tools:context=".HomeFragments.HelpReviewFragment"
     tools:ignore="MissingDefaultResource">
 
     <TextView
