--- a/app/src/main/res/layout/fragment_edit_place.xml
+++ b/app/src/main/res/layout/fragment_edit_place.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="5dp"
         android:textSize="30sp"
         android:textColor="@color/black"
-        android:text="Place Name"
+        android:text="@string/place_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -22,7 +22,7 @@
         android:layout_marginLeft="5dp"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:text="Address"
+        android:text="@string/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -32,7 +32,7 @@
         android:textSize="20sp"
         android:layout_marginLeft="5dp"
         android:textColor="@color/black"
-        android:text="Coordinates"
+        android:text="@string/coordinates"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -43,7 +43,7 @@
         android:layout_marginLeft="5dp"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:text="Remove Place" />
+        android:text="@string/remove_place" />
 
     <EditText
         android:id="@+id/placeNameEdit"
@@ -51,7 +51,7 @@
         android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Edit place name"
+        android:hint="@string/edit_place_name"
         android:textColor="@android:color/black" />
 
     <Button
@@ -60,6 +60,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Save changes" />
+        android:text="@string/save_changes" />
 
 </LinearLayout>
