--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_baseline_add_24"
-        android:contentDescription="Add"
+        android:contentDescription="@string/add"
         android:layout_margin="16dp" />
 
 </FrameLayout>
