--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        tools:listitem="@layout/place_item"
         android:padding="4dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_baseline_add_24"
-        android:contentDescription="Add"
+        android:contentDescription="@string/add"
         android:layout_margin="16dp" />
 
 </FrameLayout>
