--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -19,7 +19,7 @@
         android:id="@+id/user_name"
         android:paddingTop="8dp"
         android:textSize="20sp"
-        android:text="Username"
+        android:text="@string/username"
         android:textColor="@color/black"
         android:textStyle="bold"/>
     
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="Email"/>
+        android:text="@string/email"/>
     
     <View
         android:layout_width="match_parent"
