--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,9 @@
     <color name="red">#DD982727</color>
     <color name="yellow">#DD9E8013</color>
     <color name="underlineColor">#BDB8B8</color>
+
+    <color name="pastel_gray">#d8deea</color>
+    <color name="pastel_yellow">#fcefcb</color>
+    <color name="pastel_pink">#f9cfe0 </color>
+    <color name="pastel_blue">#8dbcf1 </color>
 </resources>
