Set Autimatic Place Name

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,36 +12,39 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_round"
-            android:orientation="horizontal">
-
-
-            <EditText
-                android:id="@+id/et_search"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="15dp"
-                android:backgroundTint="@android:color/transparent"
-                android:hint="@string/search_location"
-                android:inputType="textPersonName"
-                android:textColor="@color/black" />
-
-            <ImageButton
-                android:id="@+id/search"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="15dp"
-                android:background="@null"
-                app:srcCompat="@drawable/ic_magnify" />
-
-        </LinearLayout>
-
     </fragment>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/bg_round"
+        android:orientation="horizontal">
+
+
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="15dp"
+            android:backgroundTint="@android:color/transparent"
+            android:hint="@string/search_location"
+            android:inputType="textPersonName"
+            android:textColor="@color/black" />
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="15dp"
+            android:background="@null"
+            app:srcCompat="@drawable/ic_magnify" />
+
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/savePlaceBtn"
