--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,12 @@
     <color name="yellow">#DD9E8013</color>
     <color name="underlineColor">#BDB8B8</color>
 
+    //pastel colors
     <color name="pastel_gray">#d8deea</color>
+    <color name="pastel_gray_dark">#a9a9a9</color>
     <color name="pastel_yellow">#fcefcb</color>
     <color name="pastel_pink">#f9cfe0 </color>
     <color name="pastel_blue">#8dbcf1 </color>
+    <color name="pastel_green">#BFFCC6 </color>
+    <color name="pastel_violet">#A79AFF </color>
 </resources>
