--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,10 +4,10 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/pastel_blue</item>
         <item name="colorPrimaryVariant">@color/pastel_blue</item>
-        <item name="colorOnPrimary">@color/pastel_gray</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/pastel_yellow</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/pastel_gray_dark</item>
+        <item name="colorSecondaryVariant">@color/pastel_violet</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
 
@@ -17,3 +17,4 @@
 
     </style>
 </resources>
+
