--- a/app/src/main/res/layout/action_item.xml
+++ b/app/src/main/res/layout/action_item.xml
@@ -17,41 +17,52 @@
 
 
                 <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                    android:layout_marginTop="-5dp"
                 android:background="@drawable/bg_round_gray"
                 android:orientation="horizontal">
+
                     <TextView
-                        android:id="@+id/placeNameItem"
+                        android:id="@+id/actionName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
                         android:textColor="@color/white"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:text="@string/home"
-                        android:textSize="20sp"/>
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginVertical="5dp"
+                        android:text="@string/mute_the_sound"
+                        android:textSize="20sp" />
 
-
-            </FrameLayout>
+                </FrameLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_baseline_place_black" />
+
+
                 <TextView
-                    android:id="@+id/addressItem"
+                    android:id="@+id/placeName2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginVertical="10dp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="15dp"
-                    android:textSize="15sp"
-                    android:text="@string/serbska_17_61_696_pozna_poland" />
+                    android:text="@string/home"
+                    android:textSize="15sp" />
 
             </LinearLayout>
-
-
 
         </LinearLayout>
 
