--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -34,6 +34,7 @@
         android:layout_gravity="right|bottom"
         android:src="@drawable/ic_baseline_add_24"
         android:contentDescription="@string/add"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        tools:ignore="RtlHardcoded" />
 
 </FrameLayout>
