--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -11,6 +11,7 @@
         android:id="@+id/listOfActions"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:listitem="@layout/action_item"
         android:orientation="vertical"
         android:padding="4dp"/>
 
