--- a/app/src/main/res/layout/fragment_add_action.xml
+++ b/app/src/main/res/layout/fragment_add_action.xml
@@ -19,7 +19,6 @@
             android:background="@color/white"
             android:layout_height="40dp"
             android:spinnerMode="dropdown"/>
-
     </LinearLayout>
 
     <Spinner
@@ -35,16 +34,28 @@
         android:id="@+id/contacts_spinner"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:background="@color/white"
+        android:spinnerMode="dropdown"/>
 
 
-    <EditText
-        android:id="@+id/smsText"
+    <LinearLayout
         android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_your_text_message"
-        android:textColor="@android:color/black" />
+        android:background="@color/white">
+
+        <EditText
+            android:id="@+id/smsText"
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="@string/enter_your_text_message"
+            android:textColor="@android:color/black" />
+
+    </LinearLayout>
+
+
 
 
     <Button
