--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -15,7 +15,6 @@
             android:background="@drawable/bg_round_pastel_gray"
             android:orientation="vertical">
 
-
                 <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,7 +24,7 @@
                         android:id="@+id/placeNameItem"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginStart="15dp"
                         android:textColor="@color/white"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
@@ -45,7 +44,7 @@
                     android:layout_marginTop="15dp"
                     android:textStyle="bold"
                     android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:textSize="15sp"
                     android:text="@string/serbska_17_61_696_pozna_poland" />
 
